                                   -*- coding: utf-8 -*-

Changes with Apache Libcloud 0.14.0-beta1

 *) General

    - If the file exists, read pricing data from ~/.libcloud/pricing.json
      by default. If the file doesn't exist, fall back to the old behavior
      and use pricing data which is bundled with the release.
      [Tomaz Muraus]

    - Add libcloud.pricing.download_pricing_file function for downloading and
      updating the pricing file.
      [Tomaz Muraus]

 *) Compute

    - Refactor Rackspace driver classes and make them easier to use. Now there
      are two Rackspace provider constants - Provider.RACKSPACE which
      represents new next-gen OpenStack servers and
      Provider.RACKSPACE_FIRST_GEN which represents old first-gen cloud
      servers.

      Note: This change is backward incompatible. For more information on those
      changes and how to update your code, please visit "Upgrade Notes"
      documentation page - http://s.apache.org/lc0140un
      [Tomaz Muraus]

    - Deprecate the following EC2 provider constants: EC2_US_EAST,
      EC2_EU, EC2_EU_WEST, EC2_AP_SOUTHEAST, EC2_AP_NORTHEAST,
      EC2_US_WEST_OREGON, EC2_SA_EAST, EC2_SA_EAST and replace it with a new
      EC2 constant.
      Driver referenced by this new constant now takes a "region" argument which
      dictates to which region to connect.

      Note: Deprecated constants will continue to work until the next major
      release. For more information on those changes and how to update your
      code, please visit "Upgrade Notes" documentation page -
      http://s.apache.org/lc0140un
      [Tomaz Muraus]

    - Add support for volume related functions to OpenNebula driver.
      (LIBCLOUD-354)
      [Emanuele Rocca]

    - Add methods for managing storage volumes to the OpenStack driver.
      (LIBCLOUD-353)
      [Bernard Kerckenaere]

    - Add new driver for Google Compute Engine (LIBCLOUD-266, LIBCLOUD-386)
      [Rick Wright]
