@@ -17,9 +17,12 @@
 from __future__ import absolute_import
 from __future__ import with_statement
 
+import os
 import sys
+import tempfile
 import unittest
 
+from libcloud import _init_once
 from libcloud.compute.ssh import ParamikoSSHClient
 from libcloud.compute.ssh import ShellOutSSHClient
 from libcloud.compute.ssh import have_paramiko
@@ -41,6 +44,9 @@ class ParamikoSSHClientTests(unittest.TestCase):
                        'username': 'ubuntu',
                        'key': '~/.ssh/ubuntu_ssh',
                        'timeout': '600'}
+        _, self.tmp_file = tempfile.mkstemp()
+        os.environ['LIBCLOUD_DEBUG'] = self.tmp_file
+        _init_once()
         self.ssh_cli = ParamikoSSHClient(**conn_params)
 
     @patch('paramiko.SSHClient', Mock)
@@ -64,6 +70,7 @@ class ParamikoSSHClientTests(unittest.TestCase):
                          'look_for_keys': False,
                          'port': 22}
         mock.client.connect.assert_called_once_with(**expected_conn)
+        self.assertLogMsg('Connecting to server')
 
     @patch('paramiko.SSHClient', Mock)
     def test_create_without_credentials(self):
@@ -112,9 +119,12 @@ class ParamikoSSHClientTests(unittest.TestCase):
                                                           mode='w')
 
         mock.run(sd)
+
         # Make assertions over 'run' method
         mock_cli.get_transport().open_session().exec_command \
                 .assert_called_once_with(sd)
+        self.assertLogMsg('Executing command (cmd=/root/random_script.sh)')
+        self.assertLogMsg('Command finished')
 
         mock.close()
 
@@ -131,8 +141,16 @@ class ParamikoSSHClientTests(unittest.TestCase):
         mock.delete(sd)
         # Make assertions over the 'delete' method
         mock.client.open_sftp().unlink.assert_called_with(sd)
+        self.assertLogMsg('Deleting file')
 
         mock.close()
+        self.assertLogMsg('Closing server connection')
+
+    def assertLogMsg(self, expected_msg):
+        with open(self.tmp_file, 'r') as fp:
+            content = fp.read()
+
+        self.assertTrue(content.find(expected_msg) != -1)
 
 
 if not ParamikoSSHClient:
@@ -193,9 +211,9 @@ class ShellOutSSHClientTests(unittest.TestCase):
 
         self.assertEqual(cmd1, ['ssh', 'root@localhost'])
         self.assertEqual(cmd2, ['ssh', '-i', '/home/my.key',
-                                 'root@localhost'])
+                                'root@localhost'])
         self.assertEqual(cmd3, ['ssh', '-i', '/home/my.key',
-                                 '-oConnectTimeout=5', 'root@localhost'])
+                                '-oConnectTimeout=5', 'root@localhost'])
 
 
 if __name__ == '__main__':
